style.css
body {
    font-family: Roboto, Helvetica, sans-serif;
    margin: 0;
}

.hero {
    background-color: #1F2937;
    padding-bottom: 20px;
}

.link {
    font-size: 18px;
    color: #E5E7EB;
    display: flex;
}

.logo {
    font-size: 24px;
    color: #F9FAF8;
    padding: 5px;
    font-weight: bold;
}

.header {
    display: flex;
    justify-content: space-around;
    padding: 8px 0px;
}

ul {
    margin: 0;
    padding: 0;
    list-style: none;
}

li {
    display: inline-block;
    padding: 10px;
}

.heading-main {
    font-size: 48px;
    font-weight: 800;
    color: #F9FAF8;
    display: flex;
    flex-wrap: wrap;
}

.text-main {
    font-size: 18px;
    color: #E5E7EB;
    display: flex;
    flex-wrap: wrap;
    margin-bottom: 10px;
}

button {
    background-color: #3882F6;
    padding: 8px 16px;
    font-size: 18px;
    color: white;
    font-weight: bold;
    border-radius: 10px;
}

.hero-main {
    display: flex;
    padding: 80px;
    justify-content: space-around;
    
}

.left-main {
    max-width: 450px;
    margin-left: 35px;
}

.right-main {
    padding: 110px;
    background-color: grey;
    color: #E5E7EB;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-right: 40px;
}


.information {
    display: flex;
    flex-wrap: wrap;
}

.info-header {
    display: flex;
    font-size: 36px;
    font-weight: 800;
    color: #1F2937;
    width: 100%;
    justify-content: center;
    padding: 35px;
}

.info-boxes {
    display: flex;
    justify-content: center;
    flex-grow: 1;
    margin-bottom: 100px;
}

.box-container {
    max-width: 180px;
}

.box {
    height: 120px;
    width: 120px;
    border: 3px solid #3882F6;
    border-radius: 8px;
    display: flex;
}

